# dnc

./: .gitignore  Cargo.toml  Makefile  PROTOCOL.md  README.md
.kiro/specs/adaptive-response-sizing/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/broker-relay-mode/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/control-channel-mux/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/cursor-replay-advancement/: bugfix.md  design.md  tasks.md
.kiro/specs/destructive-pop-data-loss/: bugfix.md  design.md  tasks.md
.kiro/specs/dns-message-broker/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/dns-socks-proxy/: design.md  requirements.md  tasks.md
.kiro/specs/optional-edns/: design.md  requirements.md  tasks.md
.kiro/specs/parallel-status-polling/: design.md  requirements.md  tasks.md
.kiro/specs/smoltcp-tunnel/: tasks.md  (+2 more)
crates/dns-socks-proxy/: Cargo.toml
crates/dns-socks-proxy/src/: config.rs  crypto.rs  frame.rs  guard.rs  lib.rs  relay_transport.rs  reliability.rs  session.rs  smol_device.rs  smol_frame.rs  smol_poll.rs  socks.rs  transport.rs
crates/dns-socks-proxy/tests/: optional_edns_props.rs  private_network_guard_props.rs  session_concurrency_limiter_props.rs  smoltcp_relay_repro.proptest-regressions  smoltcp_relay_repro.rs
demo/: README.md  broker.toml  exit-node-broker.toml  run-exit-node.sh  run-smol-exit.sh  run.sh
examples/: README.md  dchat.rs  dnc.rs
proptest-regressions/: handler.txt  relay_handler.txt  store.txt
src/: config.rs  dns.rs  encoding.rs  error.rs  handler.rs  lib.rs  main.rs  relay_handler.rs  relay_store.rs  server.rs  store.rs
(+19 files in other folders)
