[workspace]
members = [".", "crates/dns-socks-proxy"]

[package]
name = "dns-message-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-proto = "0.25"
hickory-server = "0.25"
tokio = { version = "1", features = ["full"] }
data-encoding = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
atty = "0.2"

[dev-dependencies]
proptest = "1"

[[example]]
name = "dnc"
path = "examples/dnc.rs"
