[package]
name = "dns-socks-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-message-broker = { path = "../.." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
data-encoding = "2"
hickory-proto = "0.25"
ipnet = "2"
smoltcp = { version = "0.12", features = ["medium-ip", "proto-ipv4", "socket-tcp", "alloc"], default-features = false }

[dev-dependencies]
proptest = "1"

[[bin]]
name = "socks-client"
path = "src/bin/socks_client.rs"

[[bin]]
name = "exit-node"
path = "src/bin/exit_node.rs"

[[bin]]
name = "smol-client"
path = "src/bin/smol_client.rs"

[[bin]]
name = "smol-exit"
path = "src/bin/smol_exit.rs"
